--- a/src/docs/partials/namespace/events.html
+++ b/src/docs/partials/namespace/events.html
@@ -81,7 +81,6 @@ interface HideEvent extends BaseEvent {
   <title>Events</title>
   <post-date>07/08/2021</post-date>
   <update-date>07/08/2021</update-date>
-  <excerpt>How to use Tempus Dominus datetime picker
-  </excerpt>
+  <excerpt>Overview of the events fired from Tempius Dominus Datetime picker.</excerpt>
   <tags>datepicker, javascript, open source, tempus dominus, eonasdan</tags>
 </page-meta>
