--- a/src/docs/partials/namespace/index.html
+++ b/src/docs/partials/namespace/index.html
@@ -17,14 +17,13 @@
     <h2>dataKey</h2>
     <p>Returns <code>td</code>. This is used as a suffix for events e.g. <code>change.td</code>.</p>
 
-
-    <h2>Events</h2>
+    <h2>events</h2>
     <p>A class with the pickers event keys. <a href='events.html'>See the full events page for more details.</a></p>
 
-    <h2>Css</h2>
+    <h2>css</h2>
     <p>A class with the pickers css classes. <a href='css.html'>See the full css page for more details.</a></p>
 
-    <h2>ErrorMessages</h2>
+    <h2>errorMessages</h2>
     <p>A class with the pickers errors and error messages. <a href='errors.html'>See the full css page for more details.</a></p>
   </section>
 </page-body>
@@ -33,7 +32,8 @@
   <title>Namespace</title>
   <post-date>07/08/2021</post-date>
   <update-date>07/08/2021</update-date>
-  <excerpt>How to use Tempus Dominus datetime picker
+  <excerpt>
+    Overview of the Namespace for Tempus Dominus.
   </excerpt>
   <tags>datepicker, javascript, open source, tempus dominus, eonasdan</tags>
 </page-meta>
