--- a/src/docs/partials/namespace/errors.html
+++ b/src/docs/partials/namespace/errors.html
@@ -17,18 +17,14 @@
     <p>
       An error indicating that a key in the options object is invalid.
     </p>
-  </section>
 
-  <section>
     <h2 id='unexpectedOptions'>unexpectedOptions <small>(code: 1)</small><a class='anchorjs-link ' aria-label='Anchor'
                                                                             href='#unexpectedOptions'><i
       class='fas fa-anchor'></i></a></h2>
     <p>
       An error indicating that one more keys in the options object is invalid.
     </p>
-  </section>
 
-  <section>
     <h2 id='unexpectedOptionValue'>unexpectedOptionValue <small>(code: 2)</small><a class='anchorjs-link '
                                                                                     aria-label='Anchor'
                                                                                     href='#unexpectedOptionValue'><i
@@ -37,9 +33,7 @@
       An error when an option is provide an unsupported value. For example a value of 'cheese' for toolbarPlacement
       which only supports 'top', 'bottom', 'default'.
     </p>
-  </section>
 
-  <section>
     <h2 id='typeMismatch'>typeMismatch <small>(code: 3)</small><a class='anchorjs-link ' aria-label='Anchor'
                                                                   href='#typeMismatch'><i
       class='fas fa-anchor'></i></a></h2>
@@ -48,9 +42,7 @@
       For example a string value was provided to multipleDates which only
       supports true or false.
     </p>
-  </section>
 
-  <section>
     <h2 id='numbersOutOfRage'>numbersOutOfRage <small>(code: 4)</small><a class='anchorjs-link ' aria-label='Anchor'
                                                                           href='#numbersOutOfRage'><i
       class='fas fa-anchor'></i></a></h2>
@@ -58,9 +50,7 @@
       An error when an option value is outside of the expected range.
       For example <code>restrictions.daysOfWeekDisabled</code> excepts a value between 0 and 6.
     </p>
-  </section>
 
-  <section>
     <h2 id='failedToParseDate'>failedToParseDate <small>(code: 5)</small><a class='anchorjs-link ' aria-label='Anchor'
                                                                             href='#failedToParseDate'><i
       class='fas fa-anchor'></i></a></h2>
@@ -68,18 +58,14 @@
       An error when a value for a date options couldn't be parsed. Either
       the option was an invalide string or an invalid Date object.
     </p>
-  </section>
 
-  <section>
     <h2 id='mustProvideElement'>mustProvideElement <small>(code: 6)</small><a class='anchorjs-link ' aria-label='Anchor'
                                                                               href='#mustProvideElement'><i
       class='fas fa-anchor'></i></a></h2>
     <p>
       An error when an element to attach to was not provided in the constructor.
     </p>
-  </section>
 
-  <section>
     <h2 id='subscribeMismatch'>subscribeMismatch <small>(code: 7)</small><a class='anchorjs-link ' aria-label='Anchor'
                                                                             href='#subscribeMismatch'><i
       class='fas fa-anchor'></i></a></h2>
@@ -87,9 +73,7 @@
       An error if providing an array for the events to subscribe method doesn't have
       the same number of callbacks. E.g., subscribe([1,2], [1])
     </p>
-  </section>
 
-  <section>
     <h2 id='conflictingConfiguration'>conflictingConfiguration <small>(code: 8)</small><a class='anchorjs-link '
                                                                                           aria-label='Anchor'
                                                                                           href='#conflictingConfiguration'><i
@@ -97,9 +81,7 @@
     <p>
       The configuration has conflicting rules e.g. minDate is after maxDate
     </p>
-  </section>
 
-  <section>
     <h2 id='dateString'>dateString<a class='anchorjs-link ' aria-label='Anchor' href='#dateString'><i
       class='fas fa-anchor'></i></a></h2>
     <p>
@@ -108,26 +90,28 @@
     </p>
   </section>
 
-  <h2>Error Messages</h2>
-
   <section>
-    <h2 id='failedToSetInvalidDate'>failedToSetInvalidDate<a class='anchorjs-link ' aria-label='Anchor'
-                                                             href='#failedToSetInvalidDate'><i
-      class='fas fa-anchor'></i></a></h2>
-    <p>
-      Used with an <a href='events.html#error'>Error Event type</a> if the user selects a date that fails restriction
-      validation.
-    </p>
-  </section>
+    <h2>Error Messages</h2>
+    <div class='row'>
+      <div class='col offset-1'>
+        <h3 id='failedToSetInvalidDate'>failedToSetInvalidDate<a class='anchorjs-link ' aria-label='Anchor'
+                                                                 href='#failedToSetInvalidDate'><i
+          class='fas fa-anchor'></i></a></h3>
+        <p>
+          Used with an <a href='events.html#error'>Error Event type</a> if the user selects a date that fails
+          restriction
+          validation.
+        </p>
 
-  <section>
-    <h2 id='failedToParseInput'>failedToParseInput<a class='anchorjs-link ' aria-label='Anchor'
-                                                     href='#failedToParseInput'><i
-      class='fas fa-anchor'></i></a></h2>
-    <p>
-      Used with an <a href='events.html#error'>Error Event type</a> when a user changes the value of the input field
-      directly, and does not provide a valid date.
-    </p>
+        <h3 id='failedToParseInput'>failedToParseInput<a class='anchorjs-link ' aria-label='Anchor'
+                                                         href='#failedToParseInput'><i
+          class='fas fa-anchor'></i></a></h3>
+        <p>
+          Used with an <a href='events.html#error'>Error Event type</a> when a user changes the value of the input field
+          directly, and does not provide a valid date.
+        </p>
+      </div>
+    </div>
   </section>
 
 </page-body>
@@ -136,7 +120,6 @@
   <title>Errors</title>
   <post-date>07/08/2021</post-date>
   <update-date>07/08/2021</update-date>
-  <excerpt>How to use Tempus Dominus datetime picker
-  </excerpt>
+  <excerpt>Overview of the errors thrown and error messages from Tempius Dominus.</excerpt>
   <tags>datepicker, javascript, open source, tempus dominus, eonasdan</tags>
 </page-meta>
