--- a/src/docs/styles/docs.css
+++ b/src/docs/styles/docs.css
@@ -7,7 +7,7 @@
  */
 .bd-navbar {
     padding: .75rem 0;
-    background-color: #7952b3
+    background-color: var(--bs-primary);
 }
 
 .bd-navbar .navbar-toggler {
