--- a/src/docs/templates/index.html
+++ b/src/docs/templates/index.html
@@ -37,12 +37,12 @@
                 </div>
                 <h2 class="display-5 fw-normal">Installation</h2>
                 <p class="lead fw-normal">
-                    Install Tempus Domins via npm
+                    Install Tempus Domins via npm. Currently an issue with the npm package. Hopefully, I'll get this working soon.
                 </p>
                 <a class="btn btn-lg btn-outline-primary mb-3" href="/6/installing.html">Read installation docs</a>
             </div>
             <div class="col-md-7 ps-md-5">
-                <div class="highlight"><pre tabindex="0"><code class="language-shellsession">npm install tempus-dominus</code></pre></div>
+                <!--<div class="highlight"><pre tabindex="0"><code class="language-shellsession">npm install tempus-dominus</code></pre></div>-->
             </div>
         </section>
 
