--- a/src/docs/templates/index.html
+++ b/src/docs/templates/index.html
@@ -8,7 +8,7 @@
                 <div class="col-md-8 order-md-1 text-center text-md-start">
                     <h1 class="mb-3">Powerful and robust date and time picker</h1>
                     <p class="lead mb-4">
-                        Tempus Dominus is the successor to the very popular "eonasdan/bootstrap-datetimepicker". The plugin provides a wide array of options that allow develoeprs to provide date and or time selections to users as simple pickers, date of birth selection, appointments and more.
+                        Tempus Dominus is the successor to the very popular "eonasdan/bootstrap-datetimepicker". The plugin provides a wide array of options that allow developers to provide date and or time selections to users as simple pickers, date of birth selection, appointments and more.
                     </p>
 
                     <div class="d-flex flex-column flex-md-row">
@@ -37,12 +37,12 @@
                 </div>
                 <h2 class="display-5 fw-normal">Installation</h2>
                 <p class="lead fw-normal">
-                    Install Tempus Domins via npm. Currently an issue with the npm package. Hopefully, I'll get this working soon.
+                    Install Tempus Domins via npm.
                 </p>
                 <a class="btn btn-lg btn-outline-primary mb-3" href="/6/installing.html">Read installation docs</a>
             </div>
             <div class="col-md-7 ps-md-5">
-                <!--<div class="highlight"><pre tabindex="0"><code class="language-shellsession">npm install tempus-dominus</code></pre></div>-->
+                <div class="highlight"><pre tabindex="0"><code class="language-shellsession">npm install @eonasdan/tempus-dominus</code></pre></div>
             </div>
         </section>
 
@@ -66,10 +66,10 @@
 &lt;!-- Popperjs --&gt;
 &lt;script src=&quot;https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js&quot; integrity=&quot;sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp&quot; crossorigin=&quot;anonymous&quot;&gt;&lt;/script&gt;
 &lt;!-- Tempus Dominus JavaScript --&gt;
-&lt;script src=&quot;https://cdn.jsdelivr.net/gh/Eonasdan/tempus-dominus@v6-alpha1/dist/js/tempus-dominus.js&quot; crossorigin=&quot;anonymous&quot;&gt;&lt;/script&gt;
+&lt;script src=&quot;https://cdn.jsdelivr.net/gh/Eonasdan/tempus-dominus@v6-alpha1.0.3/dist/js/tempus-dominus.js&quot; crossorigin=&quot;anonymous&quot;&gt;&lt;/script&gt;
 
 &lt;!-- Tempus Dominus Styles --&gt;
-&lt;link href=&quot;https://cdn.jsdelivr.net/gh/Eonasdan/tempus-dominus@v6-alpha1/dist/css/tempus-dominus.css&quot; rel=&quot;stylesheet&quot; crossorigin=&quot;anonymous&quot;&gt;
+&lt;link href=&quot;https://cdn.jsdelivr.net/gh/Eonasdan/tempus-dominus@v6-alpha1.0.3/dist/css/tempus-dominus.css&quot; rel=&quot;stylesheet&quot; crossorigin=&quot;anonymous&quot;&gt;
     </code>
 </pre>
             </div>
