--- a/src/docs/partials/change-log.html
+++ b/src/docs/partials/change-log.html
@@ -1,6 +1,13 @@
 <page-body>
   <h1>Version 6</h1>
   <section>
+    <h2>Version 6-alpha1.0.4</h2>
+    <h3>Bug fixes</h3>
+    <ul>
+      <li>Fixed issue with meridiem (AM/PM) button clicks.</li>
+    </ul>
+  </section>
+  <section>
     <h2>Version 6-alpha1.0.3</h2>
     <h3>Bug fixes</h3>
     <ul>
