--- a/src/docs/partials/change-log.html
+++ b/src/docs/partials/change-log.html
@@ -1,6 +1,18 @@
 <page-body>
   <h1>Version 6</h1>
   <section>
+    <h2>Version 6-alpha1.0.6</h2>
+    <h3>New</h3>
+    <ul>
+      <li>Created a new method <code>set(value: any, index?: number, from: string = 'date.set')</code> that tries to conver the <code>value</code> provided and then tries to set that value to the <code>index</code> (or 0 if not using multidate).</li>
+      <li>Added esm output</li>
+    </ul>
+    <h3>Bug fixes</h3>
+    <ul>
+      <li>Fixed dealing with input values/changes.</li>
+    </ul>
+  </section>
+  <section>
     <h2>Version 6-alpha1.0.4</h2>
     <h3>Bug fixes</h3>
     <ul>
