--- a/src/docs/partials/examples/index.html
+++ b/src/docs/partials/examples/index.html
@@ -188,7 +188,12 @@
     </div>
     <script type='text/javascript'>
       const datetimepicker1 = new tempusDominus.TempusDominus(document.getElementById('datetimepicker1'), {
-
+display: {
+  components: {
+    useTwentyfourHour: true,
+    seconds: true
+  }
+}
       });
     </script>
   </section>
@@ -290,7 +295,7 @@
        pickSecond: 'Выбрать второй',
        incrementSecond: 'Увеличение секунды',
        decrementSecond: 'Уменьшение секунды',
-       togglePeriod: 'Переключить период',
+       toggleMeridiem: 'Переключить период',
        selectTime: 'Выбрать время',
        selectDate: 'Выбрать дату',
        dayViewHeaderFormat: 'long',
@@ -362,7 +367,7 @@
           pickSecond: 'Выбрать второй',
           incrementSecond: 'Увеличение секунды',
           decrementSecond: 'Уменьшение секунды',
-          togglePeriod: 'Переключить период',
+          toggleMeridiem: 'Переключить период',
           selectTime: 'Выбрать время',
           selectDate: 'Выбрать дату',
           dayViewHeaderFormat: 'long',
