--- a/src/docs/partials/functions.html
+++ b/src/docs/partials/functions.html
@@ -85,6 +85,12 @@ const picker = new tempusdominus.TempusDominus(document.getElementById('datetime
             the
             widget or do any validation.
           </p>
+          <h5 id='datesSet'>set(value, index, frrom)
+            <a class='anchorjs-link' aria-label='Anchor' href='#datesSet'><i class='fas fa-anchor'></i></a>
+          </h5>
+          <p>
+            Tries to convert the provided value to a DateTime object. If value is null|undefined then clear the value of the provided index (or 0).
+          </p>
           <h5 id='isPicked'>isPicked(DateTime, Unit?)
             <a class='anchorjs-link' aria-label='Anchor' href='#isPicked'><i class='fas fa-anchor'></i></a>
           </h5>
