--- a/src/docs/partials/migration.html
+++ b/src/docs/partials/migration.html
@@ -235,6 +235,7 @@
               ensurePath('localization', newOptions);
               Object.entries(value).forEach(([k, v]) => {
                 if (k.startsWith('prev')) k = k.replace('prev', 'previous');
+                if (k === 'togglePeriod') k = 'toggleMeridiem';
                 newOptions.localization[k] = v;
               });
               break;
