--- a/src/docs/partials/change-log.html
+++ b/src/docs/partials/change-log.html
@@ -7,6 +7,7 @@
       <li>Cleaned up css a bit. Got rid of the popper arrow and aligned the picker to the start of the element.</li>
       <li><span class="badge bg-danger">BREAKING</span> <code>display.inputFormat</code> now takes a function, not an Intl format. It has also been moved to <code>hooks.inputFormat</code> By default a function will be executed that uses Intl to format the selected date(s) based on the selected components.</li>
       <li>Added <code>hooks.inputParse</code></li>
+      <li>Merged number localization Thanks @hkvstore <a href='https://github.com/Eonasdan/tempus-dominus/issues/2408'>#2408</a></li>
     </ul>
     <h3>Bug fixes</h3>
     <ul>
