--- a/src/docs/partials/options.html
+++ b/src/docs/partials/options.html
@@ -467,8 +467,8 @@ new tempusDominus.TempusDominus(..., {
 inputFormat:(date) => { return date.toISOString() }
 </code>
         </pre>
-        <h3 id='hooksinputParse' class='mt-3'>inputParse<a class='anchorjs-link' aria-label='Anchor'
-                                              href='#hooksinputParse'><i
+        <h3 id='hooksInputParse' class='mt-3'>inputParse<a class='anchorjs-link' aria-label='Anchor'
+                                              href='#hooksInputParse'><i
           class='fas fa-anchor'></i></a>
         </h3>
         <p>
