--- a/src/docs/partials/change-log.html
+++ b/src/docs/partials/change-log.html
@@ -1,7 +1,7 @@
 <page-body>
   <h1>Version 6</h1>
   <section>
-    <h2>Version 6-alpha_</h2>
+    <h2>Version 6-alpha14</h2>
     <h3>New</h3>
     <ul>
       <li>Cleaned up css a bit. Got rid of the popper arrow and aligned the picker to the start of the element.</li>
