Fix typos in documentation

--- a/src/docs/templates/index.html
+++ b/src/docs/templates/index.html
@@ -37,7 +37,7 @@
                 </div>
                 <h2 class="display-5 fw-normal">Installation</h2>
                 <p class="lead fw-normal">
-                    Install Tempus Domins via npm.
+                    Install Tempus Dominus via npm.
                 </p>
                 <a class="btn btn-lg btn-outline-primary mb-3" href="/6/installing.html">Read installation docs</a>
             </div>
