--- a/src/docs/templates/shell.html
+++ b/src/docs/templates/shell.html
@@ -23,7 +23,7 @@
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="article" />
   <meta class="metaUrl" property="og:url" content="https://getdatepicker.com" />
-  <meta class="metaTitle" property="og:title" content="Official documentation site for Tempnus Dominus" />
+  <meta class="metaTitle" property="og:title" content="Official documentation site for Tempus Dominus" />
   <meta class="metaDescription" property="og:description" content="A robust and powerful date/time picker component." />
   <meta class="metaImage" property="og:image" content="" />
 
