Bug Fixes * Fixed issue with 24 hour display formatting. #2414 * Fixed default input change formatting function to check for empty dates. #2411

--- a/src/docs/partials/options.html
+++ b/src/docs/partials/options.html
@@ -436,7 +436,7 @@ new tempusDominus.TempusDominus(..., {
         <p>
           <strong>Accepts:</strong> true|false <strong>Defaults:</strong> false<br />
           Keep the picker window open even after a date selection. The picker can still be closed by the target or
-          clicking on on an outside element.
+          clicking on on an outside element. This option will only work when time components are disabled.
         </p>
       </div>
     </div>
