--- a/src/docs/partials/change-log.html
+++ b/src/docs/partials/change-log.html
@@ -1,5 +1,16 @@
 <page-body>
   <h1>Version 6</h1>
+  <h2>Version 6-alpha15</h2>
+  <h3>New</h3>
+  <ul>
+    <li></li>
+  </ul>
+  <h3>Bug fixes</h3>
+  <ul>
+    <li>Fixed issue with 24 hour display formatting. <a href='https://github.com/Eonasdan/tempus-dominus/issues/2414'>#2414</a></li>
+    <li>Fixed default input change formatting function to check for empty dates. <a href='https://github.com/Eonasdan/tempus-dominus/issues/2411'>#2411</a></li>
+  </ul>
+  </section>
   <section>
     <h2>Version 6-alpha14</h2>
     <h3>New</h3>
