Fixed start of the week option having the incorrect heading. #2443

--- a/src/docs/partials/change-log.html
+++ b/src/docs/partials/change-log.html
@@ -1,6 +1,15 @@
 <page-body>
   <section>
     <h1>Version 6</h1>
+    <h2>Version 6-alpha16</h2> <h3>New</h3>
+    <ul>
+
+    </ul>
+    <h3>Bug fixes</h3>
+    <ul>
+      <li>Fixed start of the week option having the incorrect heading. <a href='https://github.com/Eonasdan/tempus-dominus/issues/2414'>#2443</a>
+      </li>
+    </ul>
     <h2>Version 6-alpha15</h2>
     <h3>New</h3>
     <ul>
